# space-invaders

./: .gitignore
Server/: pom.xml
Server/src/main/java/: module-info.java
Server/src/main/java/tec/server/app/: App.java  Canon.java  Client.java  Controller.java  Game.java  Serializer.java
Server/src/main/java/tec/server/app/Entities/: Bullet.java  Canon.java  Escudo.java
Server/src/main/java/tec/server/app/Entities/enemigos/: Calamar.java  Cangrejo.java  Enemigo.java  FactoryEnemigo.java  Platillo.java  Pulpo.java
Server/src/main/java/tec/server/app/administrador/: Administrador.java
Server/src/main/java/tec/server/app/enemigos/: Calamar.java  Cangrejo.java  Enemigo.java  Platillo.java  Pulpo.java
Server/src/main/java/tec/server/app/server/: ClientHandler.java  Server.java
Server/src/main/resources/: administrador.fxml
client/: CMakeLists.txt  constants.h  main.c
client/Game/: collisions.c  collisions.h  game.c  game.h  render.c  util.h
client/Game/gameObjets/: bullet.c  bullet.h  bunker.c  bunker.h  enemy.c  enemy.h  ship.c  ship.h  spacecraft.h
client/game/: game.c  game.h  render.c  render.h  util.c  util.h
client/game/gameObjets/: bullet.c  bullet.h  bunker.c  bunker.h  enemy.c  enemy.h  ship.c  ship.h  spacecraft.c  spacecraft.h
client/socket/: serializer.c  serializer.h  socketClient.c  socketClient.h
